[project]
name = "ps-hacker-rank"
version = "0.1.0"
description = "Repository for Problem Solving in Hacker Rank"
authors = [
    {name = "misut",email = "pkr5207@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
]

[tool.poetry]
packages = [
  {include = "questions/**/py"}
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
