[project]
name = "ps-hacker-rank"
version = "0.1.0"
description = "Repository for Problem Solving in Hacker Rank"
authors = [
    {name = "misut",email = "pkr5207@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
]

[tool.uv.workspace]
members = ["questions/**/py", "questions/compare-the-triplets/py"]
